--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MarvelComicsAppExample</string>
+    <string name="iniciar_sesion">Iniciar Sesion</string>
+    <string name="hint_usuario">Usuario</string>
+    <string name="hint_password">Password</string>
 </resources>
